<resources>
    <string name="app_name">School Bees</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log out?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="popupYes">Yes</string>
    <string name="popupNo">No</string>
    <string name="logoutpopup">Logout</string>
    <string name="alert">Alert</string>
    <string name="admin_tools">*** Admin Tools ***</string>
    <string name="user">USER</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="AdDescription">Description</string>
    <string name="ListPrice">Price</string>
    <string name="ListLocation">Location</string>
    <string name="ListContact">Contact</string>
    <string name="active_ad">Active Ad</string>
    <string name="past_ad">Past Ad</string>
    <string name="interested">Interested</string>
    <string name="back">Back</string>
    <string name="removed_ad">Removed Ad</string>
    <string name="report">Report</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="backbutton"><![CDATA[<]]></string>
    <string name="keep_ad">Keep Ad</string>
    <string name="title2">Title</string>
    <string name="titleAlertHint">title</string>
    <string name="descriptionAlertHint">description</string>
    <string name="priceAlertHint">price</string>
    <string name="locationAlertHint">Location</string>
    <string name="contactAlertHint">Contact</string>
    <string name="no_input">No input</string>
    <string name="no_inputAlert">No input</string>
    <string name="no_inputAlertLocation">No input</string>
    <string name="no_inputAlertContact">No input</string>
    <string name="backButton">Back</string>
    <string name="delete_account">Delete Account</string>
    <string name="no_input_please_enter_the_title">No input. Please enter the title</string>
    <string name="no_input_please_enter_the_description">No input. Please enter the description</string>
    <string name="no_input_please_enter_the_price">No input. Please enter the price</string>
    <string name="no_input_please_enter_the_location">No input. Please enter the location</string>
    <string name="no_input_please_enter_contact_information">No input. Please enter contact information</string>
    <string name="Listcontact">contact</string>
    <string name="title_activity_post_list_search">PostListSearch</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">hello</string>
    <string name="nope">nope</string>
    <string name="delete_post">Delete Post</string>


</resources>