<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserCheck">

    <TextView
        android:id="@+id/textViewCheckTitle"
        android:layout_width="212dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="Check Listings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="468dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCheckTitle">

        <TextView
            android:id="@+id/AdTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextTitle2"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="@string/titleAlertHint"
            android:inputType="text"
            android:scrollbars="vertical"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AdDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AdDescription"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:ems="10"
            android:hint="@string/no_input"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AdPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListPrice"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/no_inputAlert"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AdLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListLocation"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/no_inputAlertLocation"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AdContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListContact"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editTextContact"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/Listcontact"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonInterested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/interested"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonReport"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/backbutton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NextButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SignOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/report"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/UcheckButtonBack"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/backButton"
        app:layout_constraintEnd_toStartOf="@+id/SignOutButton"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>