<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAlert">

    <TextView
        android:id="@+id/textViewAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="Alert"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="470dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlert"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/AdTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titleAlertHint"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AdDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AdDescription"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:ems="10"
            android:hint="@string/no_input"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AdPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListPrice"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/no_inputAlert"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AdLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListLocation"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/no_inputAlertLocation"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/AdContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListContact"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextContact"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="@string/no_inputAlertContact"
            android:scrollbars="vertical"
            android:inputType="text"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="Remove Ad"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonKeep"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/backbutton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NextButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SignOutAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonKeep"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:text="@string/keep_ad"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/AalertButtonBack"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/backButton"
        app:layout_constraintEnd_toStartOf="@+id/SignOutAlert"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>